<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.12</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.aadesh.docsearch</groupId>
	<artifactId>doc-search-backend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>doc-search-backend</name>
	<description>Document-first Knowledge Graph Search System</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
		<spring-boot.version>3.4.12</spring-boot.version>
		<springdoc-openapi.version>2.8.14</springdoc-openapi.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<!-- Apache Tika -->
		<dependency>
		  <groupId>org.apache.tika</groupId>
		  <artifactId>tika-core</artifactId>
		  <version>2.8.0</version>
		</dependency>
		<dependency>
		  <groupId>org.apache.tika</groupId>
		  <artifactId>tika-parsers-standard-package</artifactId>
		  <version>2.8.0</version>
		</dependency>
		
		<!-- Commons FileUpload -->
		<dependency>
		  <groupId>commons-fileupload</groupId>
		  <artifactId>commons-fileupload</artifactId>
		  <version>1.4</version>
		</dependency>
		
		<!--Explicit Elasticsearch deps-->
		<dependency>
		  <groupId>org.elasticsearch</groupId>
		  <artifactId>elasticsearch</artifactId>
		  <version>8.14.1</version>
		</dependency>
		
		<dependency>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-configuration-processor</artifactId>
		  <optional>true</optional>
		</dependency>
		
		<!-- Elasticsearch Java client (new official client) -->
		<dependency>
		  <groupId>co.elastic.clients</groupId>
		  <artifactId>elasticsearch-java</artifactId>
		</dependency>
		<dependency>
		  <groupId>com.fasterxml.jackson.datatype</groupId>
		  <artifactId>jackson-datatype-jsr310</artifactId>
		  <version>2.15.2</version> <!-- match your Jackson version if different -->
		</dependency>
		
		<dependency>
	        <groupId>org.springdoc</groupId>
	        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
	        <version>${springdoc-openapi.version}</version>
	    </dependency>






	</dependencies>

	<build>
		<plugins>
			<!-- Compiler plugin -->
		      <plugin>
		        <artifactId>maven-compiler-plugin</artifactId>
		        <version>${maven.compiler.plugin.version}</version>
		        <configuration>
		          <source>${java.version}</source>
		          <target>${java.version}</target>
		          <encoding>${project.build.sourceEncoding}</encoding>
		          <annotationProcessorPaths>
		            <path>
		              <groupId>org.projectlombok</groupId>
		              <artifactId>lombok</artifactId>
		              <version>1.18.30</version>
		            </path>
		          </annotationProcessorPaths>
		        </configuration>
		      </plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring-boot.version}</version>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
